*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.21 ===
* Implemented separate input and output signal spectrum analysis.
* Implemented automatic scale of spectrum graph switch.
* Updated zoom fader.
* Implemented x8 versions.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Fixed frequency inspection bug for LeftRight and MidSide versions of plugin.
* Added Bandpass, Ladder-pass and Ladder-rej filters.
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Fixed regression: non-working solo button after 1.2.6 release.
* Added display of filter number, filer channel and filter type near to the
  frequency and note.
* Added possibility to switch filter between Mid/Side and Left/Right channels.
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Equalizer is now smoothly operating with frequency/gain/q factor for each
  mode: FIR, IIR, FFT, SPM.
* Added popup menu for more precise control over the equalizer dot on the graph.
* Added frequency and note displaying (with detune in cents) over the currently
  configured filter. 
* Implemented automatic and manual inspect mode for filters.
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Fixed invalid version number in metadata.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Added built-in presets for some music genres (contributed by Largos @ linuxmusicians).
* Added possibility to add several filters by performing mouse double click on the graph area.
* Updated build scripts and dependencies.

=== 1.0.8 ===